--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -12,3 +12,7 @@
 .md-header__button.md-logo img, .md-header__button.md-logo svg {
   height: 100%;
 }
+
+.md-footer-meta__inner {
+  justify-content: space-evenly;
+}
